# pianoman

./: .gitignore  build.nix  default.nix  helpers
haskell/: .stylish-haskell.yaml  Makefile  README.md  pianoman.cabal
haskell/executable/: Main.hs
headless-teamspeak/: default.nix  qt5.nix
js-client/: client.js
misc/azmq/: .default.nix.swp  default.nix
pianoman/: default.nix
pianoman/misc/: config.bash  helpers.bash  pulse.pa
pianoman/src/: pianoman-config  pianoman-moc  pianoman-start
plugin/: .gitignore  CMakeLists.txt  default.nix
plugin/include/: ts3_functions.h
plugin/include/teamspeak/: public_definitions.h  public_errors.h  public_rare_definitions.h
plugin/src/: integration_test.cpp  plugin.c  plugin.cpp  plugin.h  rpc.cpp  rpc.hpp  simple_test.cpp
teamspeak/: default.nix  teamspeak-with-plugins.nix
