author:                   Remy Goldschmidt
version:                  0.0.1
build-type:               Simple
cabal-version:            >= 1.10
category:                 Utility
copyright:                2016 Remy Goldschmidt <taktoa@gmail.com>
extra-source-files:       README.md
license-file:             LICENSE.md
license:                  MIT
maintainer:               taktoa@gmail.com
name:                     pianoman
synopsis:                 A TeamSpeak bot written in Haskell
description:              A TeamSpeak bot written in Haskell

library
    build-depends:        base                 == 4.*

                        -- Data types
                        , containers           == 0.5.*

                        -- Strings
                        , text                 == 1.2.*
                        , bytestring           == 0.10.*

                        -- Concurrency
                        , stm                  == 2.4.*
                        , async                == 2.0.*

                        -- Monad transformers
                        , mtl                  == 2.2.*
                        , transformers         == 0.4.*

                        -- Lens
                        , lens                 == 4.13.*

                        -- Pipes
                        , pipes                == 4.1.*
                        , pipes-safe           == 2.2.*
                        , pipes-group          == 1.0.*
                        , pipes-parse          == 3.0.*
                        , pipes-cereal         == 0.1.*
                        , pipes-zeromq4        == 0.2.*
                        , pipes-bytestring     == 2.1.*
                        , pipes-concurrency    == 2.0.*

                        -- Socket I/O
                        , zeromq4-haskell      == 0.6.*

                        -- Serialization
                        , aeson                == 0.10.*
                        , cereal               == 0.4.*
                        , binary               == 0.7.*
                        , msgpack              == 1.0.*

                        -- Parsing
                        , megaparsec           == 4.2.*

                        -- Database
                        , persistent           == 2.2.*
                        , persistent-sqlite    == 2.2.*
                        , acid-state           == 0.14.*

                        -- Miscellaneous
                        , hex                  == 0.1.*

    default-language:     Haskell2010
    exposed-modules:      Utility.PianoMan
                        , Utility.PianoMan.Types
                        , Utility.PianoMan.ZeroMQ
                        , Utility.PianoMan.Example
    ghc-options:          -Wall
                          -fno-warn-type-defaults
                          -fno-warn-unused-imports
                          -fno-warn-unused-do-bind
                          -O0
                          -j8
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       library
    default-extensions:   OverloadedStrings
                        , BangPatterns
                        , TupleSections

executable pianoman
    build-depends:        base == 4.*
                        , pianoman
    default-language:     Haskell2010
    ghc-options:          -threaded
    ghc-prof-options:     -auto-all -prof
    hs-source-dirs:       executable
    main-is:              Main.hs
